SET(GAMCS_GIM_SRCS
    ./GIOM.cpp
    ./TSGIOM.cpp
    ./StateInfoParser.cpp
    ./Agent.cpp
    ./Avatar.cpp
    ./MemoryViewer.cpp
    )

SET(GAMCS_CS_SRCS
    ./CSOSAgent.cpp
    ./PrintViewer.cpp
    ./DotViewer.cpp
    ./CDotViewer.cpp
    ./Debug.cpp
    )

SET(GAMCS_MYSQL_SRCS
    ./Mysql.cpp
    )

IF (WITH_MYSQL)
    SET(GAMCS_LIB_SRCS
        ${GAMCS_GIM_SRCS}
        ${GAMCS_CS_SRCS}
        ${GAMCS_MYSQL_SRCS}
        )
ELSE (WITH_MYSQL)
    SET(GAMCS_LIB_SRCS
        ${GAMCS_GIM_SRCS}
        ${GAMCS_CS_SRCS}
        )
ENDIF()

# shared library
ADD_LIBRARY(${GAMCS_NAME} SHARED ${GAMCS_LIB_SRCS})
TARGET_LINK_LIBRARIES(${GAMCS_NAME} ${LIBS})   # dependencies
SET_TARGET_PROPERTIES(${GAMCS_NAME} PROPERTIES CLEAN_DIRECT_OUTPUT 1 
    VERSION ${GAMCS_MAJOR}.${GAMCS_MINOR} SOVERSION ${GAMCS_MAJOR})

# static library
ADD_LIBRARY(${GAMCS_STATIC_NAME} STATIC ${GAMCS_LIB_SRCS})
TARGET_LINK_LIBRARIES(${GAMCS_STATIC_NAME} ${LIBS})
SET_TARGET_PROPERTIES(${GAMCS_STATIC_NAME} PROPERTIES OUTPUT_NAME ${GAMCS_NAME} CLEAN_DIRECT_OUTPUT 1)

# install library
SET(LIBDIR  ${CMAKE_INSTALL_PREFIX}/lib)
INSTALL(TARGETS ${GAMCS_NAME} ${GAMCS_STATIC_NAME}
    LIBRARY DESTINATION ${LIBDIR}
    ARCHIVE DESTINATION ${LIBDIR})
