LINK_DIRECTORIES(${LIBDIR}) # library search path

IF (UNIX)
ADD_EXECUTABLE(sgviewer sgviewer.cpp)
TARGET_LINK_LIBRARIES(sgviewer ${GAMCS_NAME}) 
ENDIF (UNIX)

# install tools
SET(EXEC_PREFIX ${CMAKE_INSTALL_PREFIX}/bin)

IF (UNIX)
INSTALL(TARGETS sgviewer 
    RUNTIME DESTINATION ${EXEC_PREFIX})
ENDIF (UNIX)

INSTALL(PROGRAMS graphml2dot.py
    DESTINATION ${EXEC_PREFIX})
