ADD_EXECUTABLE(printviewer print_viewer.cpp)
TARGET_LINK_LIBRARIES(printviewer avatar mysqlclient)
ADD_EXECUTABLE(dotviewer dot_viewer.cpp)
TARGET_LINK_LIBRARIES(dotviewer avatar mysqlclient) 
ADD_EXECUTABLE(cleandotviewer clean_dotviewer.cpp)
TARGET_LINK_LIBRARIES(cleandotviewer avatar mysqlclient) 